# contianer

./: .dockerignore  .gitignore  README.md  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.yml  launch.json  package-lock.json  package.json  pnpm-lock.yaml
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.aws.lambda  Dockerfile.dev  Dockerfile.prod  Makefile  demo_data.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/migrations/models/: 1_20240715171902_None.py  2_20240715185632_update.py
backend/src/: config.py  dependencies.py  main.py  redis.py
backend/src/api/: account.py  application_schema.py  cache.py  commissions.py  container_pricing.py  contracts.py  cost_type.py  country.py  coupon_code.py  customer_applications.py  customers.py  depot.py  driver.py  fee_api.py  fee_type.py  file_upload.py  google_maps.py  integrations.py  internal_payment.py  inventory.py  inventory_address.py  line_item.py  location_distances.py  location_pricing.py  logistics_zones_api.py  misc_costs.py  notes.py  notifications.py  order_contract.py  order_fee_balance.py  order_tax_api.py  orders.py  other_product.py  payment_methods.py  quote_searches.py  rent_period_fee.py  rent_period_info.py  rental_history.py  reports_api.py  role.py  (+6 more)
backend/src/auth/: __init__.py  auth.py
backend/src/controllers/: account.py  application_schema.py  balance.py  cache.py  commission.py  container_pricing.py  contracts.py  cost_type.py  country.py  coupon_code.py  coupon_code_order.py  customer_application.py  customer_statement.py  customers.py  depot.py  driver.py  event_controller.py  fee_controller.py  fee_type.py  file_upload.py  google_maps.py  inventory.py  inventory_address.py  line_item.py  location_distance.py  location_pricing.py  misc_costs.py  notes.py  notifications.py  notifications_controller.py  order_contract.py  order_fee_balance.py  order_tax.py  orders.py  other_inventory.py  other_product.py  payment.py  product_category.py  quote_searches.py  rent_period.py  (+16 more)
backend/src/crud/: _utils.py  accessory_line_item_crud.py  account_crud.py  address_crud.py  assistant_crud.py  audit_crud.py  auth0_management.py  cost_type.py  (+72 more)
backend/tests/: conftest.py  test_auth0_management.py  test_email_service.py
(+619 files in other folders)
